fixed final results images from stretching, flexed items

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -346,13 +346,11 @@ button, #next2 {
 }
 .finalSection {
 	display: flex;
-    // align-items: center;
+   	flex-wrap: wrap;
+   	justify-content: center;
     .kitSelection {
     	display: flex;
     	flex-direction: column;
-    	justify-content: space-between;
-    	align-items: center;
-    	width: 100%;
     	max-width: 100%;
     	max-height: 100%;
     	border: 1px solid #8f8f8f;
